header bug fix z-index

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,6 +5,7 @@
 
 .avatar img {
   margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .name {
@@ -18,9 +19,12 @@
 
 .header {
   position: relative;
-  height: 400px;
+  height: 450px;
   margin-top: 120px;
   background-color: #00d5fa;
   background-image: url("../images/cubes.png");
+  z-index: -1;
+
+
 }
 
